K8S/shipping-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shippingservice
  template:
    metadata:
      labels:
        app: shippingservice
    spec:
      containers:
        - name: shippingservice
          image: crusher1224/shippingservice:latest
          resources:
            limits:
              memory: '128Mi'
              cpu: '500m'
